# HelpFlow

./: .env.example  .gitignore  CASE-STUDY.md  CLAUDE.md  Dockerfile  LOOM-SCRIPT.md  README.md  SETUP.md  pyproject.toml  requirements.txt
.claude/commands/: spec-check.md
.github/workflows/: keepalive.yml
ClaudeSession/: Solution-Design-chat.txt
backend/: main.py
backend/agents/: answer_agent.py  escalation.py  retrieval_agent.py  rewrite_agent.py
backend/api/: admin_sources.py  auth.py  chat.py  conversations.py  health.py  models.py  premium.py  widget.py  workspaces.py
backend/channels/: conversation_store.py  subscribe.py
backend/graph/: support_graph.py
backend/ingestion/: chunker.py  crawler.py  errors.py  extractor.py  ingest_service.py
backend/llm/: catalog.py  factory.py  gateway.py  reranker.py  runconfig.py
backend/middleware/: jwt_auth.py  (+2 more)
docs/: ARCHITECTURE.md  BUILD-PROMPTS.md  runbook-handoff.md  runbook.md
portal/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: apply-sql.sh  check-sync.mjs  export-workflows.mjs
snippets/: business-hours.js  format-digest.js  format-lead.js  sla-sweep.js  verify-token.js
sql/: 001_schema.sql  002_views_rls.sql  003_users_trials.sql  004_events_idempotency.sql  005_gap_clusters.sql  006_ops_markers.sql  assert_events_idempotency.sql  assert_schema.sql  assert_users_trials.sql
widget/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
workflows/: wf-handoff.json  wf-ops.json  wf-premium-lead.json
(+169 files in other folders)
